# company_searcher

./: .gitignore  Cargo.toml  output.csv  output.txt
src/: company.rs  main.rs
