[package]
name = "company_searcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio       = {version = "1.32.0",  features = ["full"]}
serde       = {version = "1.0.188", features = ["derive"]}
serde_json  = "1.0.105"
anyhow      = "1.0.75"
thiserror   = "1.0.48"
reqwest     = {version = "0.11.20", features = ["json", "blocking"]}
lazy_static = "1.4.0"
futures = "0.3"